--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "node -e \"console.log('No web unit tests configured yet')\"",
     "test:e2e": "playwright test"
   },
   "dependencies": {
