feat: productize dashboard and harden KRX integration

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
 ENVIRONMENT=development
 DART_API_KEY=
 KRX_API_KEY=
-DATABASE_URL=postgresql+psycopg://anti_gravity:anti_gravity@localhost:5432/anti_gravity
+DATABASE_URL=postgresql+psycopg://anti_gravity:anti_gravity@localhost:55432/anti_gravity
 REDIS_URL=redis://localhost:6379/0
+KRX_API_INDEX_PATH=idx/krx_dd_trd,idx/kospi_dd_trd,idx/kosdaq_dd_trd
+KRX_API_STOCK_PATH=sto/stk_bydd_trd
+KRX_API_SECURITIES_PATH=sto/ksq_bydd_trd,sto/ksq_isu_base_info
+KRX_API_BOND_PATH=bon/bnd_bydd_trd
+KRX_API_DERIVATIVE_PATH=drv/fut_bydd_trd,drv/opt_bydd_trd
+KRX_API_GENERAL_PATH=sto/knx_bydd_trd,sto/knx_isu_base_info
+KRX_API_ESG_PATH=esg/sri_bond_info,esg/esg_index_info,esg/esg_etp_info
+NEXT_PUBLIC_API_BASE_URL=http://127.0.0.1:8000/api/v1
