--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,13 @@ venv/
 # Node
 node_modules/
 .next/
+.next-build/
+.next-dev/
 dist/
 coverage/
 web/test-results/
+web/build_*.log
+web/pw_*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
