--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:clean": "node -e \"const fs=require('fs'); fs.rmSync('.next-build',{recursive:true,force:true}); fs.rmSync('.next-dev',{recursive:true,force:true}); fs.rmSync('.next',{recursive:true,force:true});\"",
+    "build:stable": "npm run build:clean && npm run build",
     "start": "next start",
     "lint": "next lint",
     "test": "node -e \"console.log('No web unit tests configured yet')\"",
@@ -17,8 +19,11 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.58.2",
-    "typescript": "^5.7.2",
     "@types/react": "^19.0.2",
-    "@types/node": "^22.10.1"
+    "@types/node": "^22.10.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
   }
 }
