security: remove hardcoded db credentials from tracked config

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 ENVIRONMENT=development
 DART_API_KEY=
 KRX_API_KEY=
-DATABASE_URL=postgresql+psycopg://anti_gravity:anti_gravity@localhost:55432/anti_gravity
+DATABASE_URL=postgresql+psycopg://anti_gravity:<POSTGRES_PASSWORD>@localhost:55432/anti_gravity
 REDIS_URL=redis://localhost:6379/0
 API_BASE_URL=http://127.0.0.1:8000/api/v1
 KRX_API_INDEX_PATH=idx/krx_dd_trd,idx/kospi_dd_trd,idx/kosdaq_dd_trd
@@ -16,4 +16,4 @@ BACKEND_PORT=8000
 WEB_PORT=3000
 POSTGRES_DB=anti_gravity
 POSTGRES_USER=anti_gravity
-POSTGRES_PASSWORD=anti_gravity
+POSTGRES_PASSWORD=
