--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,7 +1,7 @@
 [alembic]
 script_location = alembic
 prepend_sys_path = .
-sqlalchemy.url = postgresql+psycopg://anti_gravity:anti_gravity@localhost:55432/anti_gravity
+sqlalchemy.url = sqlite:///./anti_gravity.db
 
 [loggers]
 keys = root,sqlalchemy,alembic
