--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_DB: ${POSTGRES_DB:-anti_gravity}
       POSTGRES_USER: ${POSTGRES_USER:-anti_gravity}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-anti_gravity}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -34,7 +34,7 @@ services:
       redis:
         condition: service_healthy
     environment:
-      DATABASE_URL: postgresql+psycopg://${POSTGRES_USER:-anti_gravity}:${POSTGRES_PASSWORD:-anti_gravity}@postgres:5432/${POSTGRES_DB:-anti_gravity}
+      DATABASE_URL: postgresql+psycopg://${POSTGRES_USER:-anti_gravity}:${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}@postgres:5432/${POSTGRES_DB:-anti_gravity}
       REDIS_URL: redis://redis:6379/0
       ENVIRONMENT: ${ENVIRONMENT:-production}
       DART_API_KEY: ${DART_API_KEY:-}
@@ -78,4 +78,3 @@ services:
 
 volumes:
   postgres_data:
-
