--- a/web/package.json
+++ b/web/package.json
@@ -13,14 +13,14 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
-    "next": "15.1.0",
+    "next": "^15.5.12",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.58.2",
-    "@types/react": "^19.0.2",
     "@types/node": "^22.10.1",
+    "@types/react": "^19.0.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
     "tailwindcss": "^3.4.17",
